# nft-gas-prover-rust

./: Cargo.toml
data/: account_age_input.json  circuit.json  output.json  output.snark  pinning.json  verify_sig_input.json
