[package]
name = "nft-gas-prover-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-sdk-rs", branch = "feat/ecdsa" }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
axiom-circuit = { git = "https://github.com/axiom-crypto/axiom-sdk-rs", branch = "feat/ecdsa" }
secp256k1 = { version = "0.29.0", features = ["recovery", "global-context"]}
